deployment/kubernetes/redis-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: precis-redis

spec:

  replicas: 1

  selector:

    matchLabels:

      app: precis-redis

  template:

    metadata:

      labels:

        app: precis-redis

    spec:

      containers:

        - name: redis

          image: redis:7

          ports:

            - containerPort: 6379
